--- a/Wi20_content/machine_learning_images.ipynb
+++ b/Wi20_content/machine_learning_images.ipynb
@@ -85,7 +85,7 @@
    "source": [
     "The handwritten digits dataset is made up of 8x8 pixel images of digits. Let's take a look at the first four images, stored in the `images` attribute of the dataset.\n",
     "\n",
-    "In order for this machine learning example to work, each image must be the same size. Each pixel location in the 8x8 map is a different input into the machine learning algorithm."
+    "In order for this machine learning example to work, each image must be the same size. Each pixel location in the 8x8 map is a different input, or feature, into the machine learning algorithm."
    ]
   },
   {
