Added link to today's lecture (matplotlib/skimage)

--- a/Wi20_content/convolutional_neural_networks.ipynb
+++ b/Wi20_content/convolutional_neural_networks.ipynb
@@ -411,13 +411,7 @@
       "50000/50000 [==============================] - 279s 6ms/step - loss: 0.6363 - acc: 0.7879 - val_loss: 0.6921 - val_acc: 0.7744\n",
       "Epoch 56/100\n",
       "50000/50000 [==============================] - 277s 6ms/step - loss: 0.6364 - acc: 0.7889 - val_loss: 0.6448 - val_acc: 0.7825\n",
-      "Epoch 57/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/100\n",
       "50000/50000 [==============================] - 273s 5ms/step - loss: 0.6354 - acc: 0.7895 - val_loss: 0.6569 - val_acc: 0.7811\n",
       "Epoch 58/100\n",
       "50000/50000 [==============================] - 273s 5ms/step - loss: 0.6340 - acc: 0.7891 - val_loss: 0.6478 - val_acc: 0.7864\n",
